--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-
 <!-- Horiseon Managment website -->
 <body>
     <!-- top menu bar -->
-    <header>
+    <header class="header">
         <h1><span class="seo">Horiseon</span></h1>
         <div>
             <ul>
@@ -28,7 +27,7 @@
             </ul>
         </div>
     </header>
-    <h1 class="hero"></h1>
+    <div class="hero"></div>
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
@@ -51,39 +50,39 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </article>
+    </section>
     <!-- sidebar menu --> 
-    <article class="benefits">
-        <aside class="benefit-lead">
+    <aside class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </aside>
-        <aside class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brend Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </aside>
+        </section>
         <div id="axis" class="one two">
-        <aside class="benefit-cost">
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"> 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </aside>
-    </article>
+        </section>
+    </aside>
     <!-- footer -->
-    <article class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </article>
+    </footer>
 </body>
 
 </html>
